* 2012-05-10 - marcus.klein@open-xchange.com

 - Fix for bug 20893: Using ui/product/name from ui.properties for calendar printing templates title.

* 2012-05-09 - marcus.klein@open-xchange.com

 - Fix for bug #21695: Due date for tasks must not be corrected to one day earlier as for full day appointments.
 - Fix for bug #21174: Removed hardcoded limit of 50,000 for contacts.

* 2012-05-09 - thorben.betten@open-xchange.com

 - Fix for bug #21985: Log appropriate error if 'com.openexchange.spamhandler.cloudmark.targetSpamEmailAddress' property is missing

* 2012-05-08 - thorben.betten@open-xchange.com

 - Fix for bug 21766: Fixed parsing of IMAP STATUS response if folder full name contains an opening parenthesis
 - Fix for bug 21891: Simultaneously execute STATUS for MESSAGE and UNREAD

* 2012-05-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 22094: Use original folder ID when applying patches during move operations
 
* 2012-05-04 - martin.herfurth@open-xchange.com

 - Fix for bug 22085: Ghost Location Changes.

* 2012-05-04 - thorben.betten@open-xchange.com

 - Fix for bug 21633: Property to enable/disable possible translation of default folders

* 2012-05-04 - marcus.klein@open-xchange.com

 - Fix for bug 20961: Session is destroyed if user is deleted and created again.

* 2012-05-03 - jan.bauerdick@open-xchange.com

 - Refactor error messages moving translatable strings into LocalizableStrings classes
 - Remove stale bundles from git

* 2012-05-03 - thorben.betten@open-xchange.com

 - Fix for bug 21292: Allowing a public folder's creator to delete a folder
 - Fix for bug 22074: Improved html2text invocation
 - Fix for bug 22076: Checking for possible mail-safe encoding
 - Fix for bug 22083: Provide account information on error
 - Logging for bug 22084: Providing JSON error object returned by FB API
 - Fix for bug 21870: Ensured presence of appropriate warning, rather than an error